Fix css layout bug on page reorder iwth long page names

--- a/src/main/webapp/studio/static/themes/default/css/forms.css
+++ b/src/main/webapp/studio/static/themes/default/css/forms.css
@@ -49,6 +49,10 @@
     cursor: move;
     background: #fff;
 }
+
+.form-page h4 {
+    word-break: break-all;
+}
 /*
   Formbuilder specific CSS
  */
